generated/PAMParser.py
# Generated from PAM.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PAMParser ( Parser ):

    grammarFileName = "PAM.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'read'", "'write'", "':='", "'if'", 
                     "'then'", "'else'", "'fi'", "'while'", "'do'", "'end'", 
                     "','", "'('", "')'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'or'", "'and'", "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NEWLINE", 
                      "WEAKOP", "STRONGOP", "RELATION", "NUMBER", "DISJUNCTION", 
                      "CONJUNCTION", "NEGATION", "BOOLEAN", "VARNAME", "WS" ]

    RULE_progr = 0
    RULE_series = 1
    RULE_stmt = 2
    RULE_input_stmt = 3
    RULE_output_stmt = 4
    RULE_assign_stmt = 5
    RULE_cond_stmt = 6
    RULE_loop = 7
    RULE_compar = 8
    RULE_varlist = 9
    RULE_expr = 10
    RULE_term = 11
    RULE_elem = 12
    RULE_log_expr = 13
    RULE_log_weak_term = 14
    RULE_log_term = 15
    RULE_log_elem = 16

    ruleNames =  [ "progr", "series", "stmt", "input_stmt", "output_stmt", 
                   "assign_stmt", "cond_stmt", "loop", "compar", "varlist", 
                   "expr", "term", "elem", "log_expr", "log_weak_term", 
                   "log_term", "log_elem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    NEWLINE=15
    WEAKOP=16
    STRONGOP=17
    RELATION=18
    NUMBER=19
    DISJUNCTION=20
    CONJUNCTION=21
    NEGATION=22
    BOOLEAN=23
    VARNAME=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def series(self):
            return self.getTypedRuleContext(PAMParser.SeriesContext,0)


        def NEWLINE(self):
            return self.getToken(PAMParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PAMParser.RULE_progr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgr" ):
                listener.enterProgr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgr" ):
                listener.exitProgr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgr" ):
                return visitor.visitProgr(self)
            else:
                return visitor.visitChildren(self)




    def progr(self):

        localctx = PAMParser.ProgrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_progr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.series()
            self.state = 35
            self.match(PAMParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeriesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.StmtContext)
            else:
                return self.getTypedRuleContext(PAMParser.StmtContext,i)


        def getRuleIndex(self):
            return PAMParser.RULE_series

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeries" ):
                listener.enterSeries(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeries" ):
                listener.exitSeries(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeries" ):
                return visitor.visitSeries(self)
            else:
                return visitor.visitChildren(self)




    def series(self):

        localctx = PAMParser.SeriesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_series)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.stmt()
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PAMParser.T__0:
                self.state = 38
                self.match(PAMParser.T__0)
                self.state = 39
                self.stmt()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def input_stmt(self):
            return self.getTypedRuleContext(PAMParser.Input_stmtContext,0)


        def output_stmt(self):
            return self.getTypedRuleContext(PAMParser.Output_stmtContext,0)


        def assign_stmt(self):
            return self.getTypedRuleContext(PAMParser.Assign_stmtContext,0)


        def cond_stmt(self):
            return self.getTypedRuleContext(PAMParser.Cond_stmtContext,0)


        def loop(self):
            return self.getTypedRuleContext(PAMParser.LoopContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = PAMParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PAMParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.input_stmt()
                pass
            elif token in [PAMParser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.output_stmt()
                pass
            elif token in [PAMParser.VARNAME]:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.assign_stmt()
                pass
            elif token in [PAMParser.T__4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.cond_stmt()
                pass
            elif token in [PAMParser.T__8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 49
                self.loop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(PAMParser.VarlistContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_input_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput_stmt" ):
                listener.enterInput_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput_stmt" ):
                listener.exitInput_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput_stmt" ):
                return visitor.visitInput_stmt(self)
            else:
                return visitor.visitChildren(self)




    def input_stmt(self):

        localctx = PAMParser.Input_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_input_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(PAMParser.T__1)
            self.state = 53
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Output_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(PAMParser.VarlistContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_output_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput_stmt" ):
                listener.enterOutput_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput_stmt" ):
                listener.exitOutput_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput_stmt" ):
                return visitor.visitOutput_stmt(self)
            else:
                return visitor.visitChildren(self)




    def output_stmt(self):

        localctx = PAMParser.Output_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_output_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(PAMParser.T__2)
            self.state = 56
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(PAMParser.VARNAME, 0)

        def expr(self):
            return self.getTypedRuleContext(PAMParser.ExprContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_assign_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_stmt" ):
                listener.enterAssign_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_stmt" ):
                listener.exitAssign_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = PAMParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(PAMParser.VARNAME)
            self.state = 59
            self.match(PAMParser.T__3)
            self.state = 60
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_expr(self):
            return self.getTypedRuleContext(PAMParser.Log_exprContext,0)


        def series(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.SeriesContext)
            else:
                return self.getTypedRuleContext(PAMParser.SeriesContext,i)


        def getRuleIndex(self):
            return PAMParser.RULE_cond_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_stmt" ):
                listener.enterCond_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_stmt" ):
                listener.exitCond_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond_stmt" ):
                return visitor.visitCond_stmt(self)
            else:
                return visitor.visitChildren(self)




    def cond_stmt(self):

        localctx = PAMParser.Cond_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cond_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(PAMParser.T__4)
            self.state = 63
            self.log_expr()
            self.state = 64
            self.match(PAMParser.T__5)
            self.state = 65
            self.series()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PAMParser.T__6:
                self.state = 66
                self.match(PAMParser.T__6)
                self.state = 67
                self.series()


            self.state = 70
            self.match(PAMParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_expr(self):
            return self.getTypedRuleContext(PAMParser.Log_exprContext,0)


        def series(self):
            return self.getTypedRuleContext(PAMParser.SeriesContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = PAMParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(PAMParser.T__8)
            self.state = 73
            self.log_expr()
            self.state = 74
            self.match(PAMParser.T__9)
            self.state = 75
            self.series()
            self.state = 76
            self.match(PAMParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.ExprContext)
            else:
                return self.getTypedRuleContext(PAMParser.ExprContext,i)


        def RELATION(self):
            return self.getToken(PAMParser.RELATION, 0)

        def getRuleIndex(self):
            return PAMParser.RULE_compar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompar" ):
                listener.enterCompar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompar" ):
                listener.exitCompar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompar" ):
                return visitor.visitCompar(self)
            else:
                return visitor.visitChildren(self)




    def compar(self):

        localctx = PAMParser.ComparContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_compar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.expr()
            self.state = 79
            self.match(PAMParser.RELATION)
            self.state = 80
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(PAMParser.VARNAME)
            else:
                return self.getToken(PAMParser.VARNAME, i)

        def getRuleIndex(self):
            return PAMParser.RULE_varlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarlist" ):
                listener.enterVarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarlist" ):
                listener.exitVarlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = PAMParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(PAMParser.VARNAME)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PAMParser.T__11:
                self.state = 83
                self.match(PAMParser.T__11)
                self.state = 84
                self.match(PAMParser.VARNAME)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.TermContext)
            else:
                return self.getTypedRuleContext(PAMParser.TermContext,i)


        def WEAKOP(self, i:int=None):
            if i is None:
                return self.getTokens(PAMParser.WEAKOP)
            else:
                return self.getToken(PAMParser.WEAKOP, i)

        def getRuleIndex(self):
            return PAMParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = PAMParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.term()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PAMParser.WEAKOP:
                self.state = 91
                self.match(PAMParser.WEAKOP)
                self.state = 92
                self.term()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.ElemContext)
            else:
                return self.getTypedRuleContext(PAMParser.ElemContext,i)


        def STRONGOP(self, i:int=None):
            if i is None:
                return self.getTokens(PAMParser.STRONGOP)
            else:
                return self.getToken(PAMParser.STRONGOP, i)

        def getRuleIndex(self):
            return PAMParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = PAMParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.elem()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PAMParser.STRONGOP:
                self.state = 99
                self.match(PAMParser.STRONGOP)
                self.state = 100
                self.elem()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(PAMParser.NUMBER, 0)

        def BOOLEAN(self):
            return self.getToken(PAMParser.BOOLEAN, 0)

        def VARNAME(self):
            return self.getToken(PAMParser.VARNAME, 0)

        def expr(self):
            return self.getTypedRuleContext(PAMParser.ExprContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElem" ):
                listener.enterElem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElem" ):
                listener.exitElem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElem" ):
                return visitor.visitElem(self)
            else:
                return visitor.visitChildren(self)




    def elem(self):

        localctx = PAMParser.ElemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_elem)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PAMParser.NUMBER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(PAMParser.NUMBER)
                pass
            elif token in [PAMParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(PAMParser.BOOLEAN)
                pass
            elif token in [PAMParser.VARNAME]:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(PAMParser.VARNAME)
                pass
            elif token in [PAMParser.T__12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.match(PAMParser.T__12)
                self.state = 110
                self.expr()
                self.state = 111
                self.match(PAMParser.T__13)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_weak_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.Log_weak_termContext)
            else:
                return self.getTypedRuleContext(PAMParser.Log_weak_termContext,i)


        def DISJUNCTION(self, i:int=None):
            if i is None:
                return self.getTokens(PAMParser.DISJUNCTION)
            else:
                return self.getToken(PAMParser.DISJUNCTION, i)

        def getRuleIndex(self):
            return PAMParser.RULE_log_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_expr" ):
                listener.enterLog_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_expr" ):
                listener.exitLog_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog_expr" ):
                return visitor.visitLog_expr(self)
            else:
                return visitor.visitChildren(self)




    def log_expr(self):

        localctx = PAMParser.Log_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_log_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.log_weak_term()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PAMParser.DISJUNCTION:
                self.state = 116
                self.match(PAMParser.DISJUNCTION)
                self.state = 117
                self.log_weak_term()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_weak_termContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.Log_termContext)
            else:
                return self.getTypedRuleContext(PAMParser.Log_termContext,i)


        def CONJUNCTION(self, i:int=None):
            if i is None:
                return self.getTokens(PAMParser.CONJUNCTION)
            else:
                return self.getToken(PAMParser.CONJUNCTION, i)

        def getRuleIndex(self):
            return PAMParser.RULE_log_weak_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_weak_term" ):
                listener.enterLog_weak_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_weak_term" ):
                listener.exitLog_weak_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog_weak_term" ):
                return visitor.visitLog_weak_term(self)
            else:
                return visitor.visitChildren(self)




    def log_weak_term(self):

        localctx = PAMParser.Log_weak_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_log_weak_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.log_term()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PAMParser.CONJUNCTION:
                self.state = 124
                self.match(PAMParser.CONJUNCTION)
                self.state = 125
                self.log_term()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_termContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_elem(self):
            return self.getTypedRuleContext(PAMParser.Log_elemContext,0)


        def NEGATION(self, i:int=None):
            if i is None:
                return self.getTokens(PAMParser.NEGATION)
            else:
                return self.getToken(PAMParser.NEGATION, i)

        def getRuleIndex(self):
            return PAMParser.RULE_log_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_term" ):
                listener.enterLog_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_term" ):
                listener.exitLog_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog_term" ):
                return visitor.visitLog_term(self)
            else:
                return visitor.visitChildren(self)




    def log_term(self):

        localctx = PAMParser.Log_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_log_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PAMParser.NEGATION:
                self.state = 131
                self.match(PAMParser.NEGATION)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.log_elem()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_elemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compar(self):
            return self.getTypedRuleContext(PAMParser.ComparContext,0)


        def VARNAME(self):
            return self.getToken(PAMParser.VARNAME, 0)

        def BOOLEAN(self):
            return self.getToken(PAMParser.BOOLEAN, 0)

        def log_expr(self):
            return self.getTypedRuleContext(PAMParser.Log_exprContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_log_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_elem" ):
                listener.enterLog_elem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_elem" ):
                listener.exitLog_elem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLog_elem" ):
                return visitor.visitLog_elem(self)
            else:
                return visitor.visitChildren(self)




    def log_elem(self):

        localctx = PAMParser.Log_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_log_elem)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.compar()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(PAMParser.VARNAME)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.match(PAMParser.BOOLEAN)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 142
                self.match(PAMParser.T__12)
                self.state = 143
                self.log_expr()
                self.state = 144
                self.match(PAMParser.T__13)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





